Fix x-axis overflow on home page

--- a/src/index.css
+++ b/src/index.css
@@ -59,4 +59,5 @@ ul {
   scroll-snap-type: y mandatory;
   overflow-y: scroll;
   height: 100vh;
+  overflow-x: hidden;
 }
