--- a/src/pages/home/testimonials.module.css
+++ b/src/pages/home/testimonials.module.css
@@ -13,7 +13,7 @@
 }
 
 .carousel-container {
-    width: 100vw;
+    width: 95vw;
     margin-bottom: 5em;
 }
 
